@@ -1,4 +1,4 @@
-SUBDIRS = simple
+SUBDIRS = 
 
 #EXTRA_DIST	=  Makefile.am_fragment README.txt
 
