@@ -1,5 +1,0 @@
-include $(top_srcdir)/examples/Makefile.am_fragment
-
-noinst_PROGRAMS = simple
-simple_SOURCES = simple.cc window.cc window.h
-
